# command_project

./: .gitignore  CMakeLists.txt  README.md  Untitled Diagram.drawio  calc_f_simple.cpp  calculation.cpp  calculation.h  f.cpp  inputpanel.cpp  main.cpp  mainform.cpp  mainform.h  make_f.cpp  make_table.cpp  parser.cpp  parser.h  parser.hpp  tests.cpp  toolbar.cpp  toolbar.h  unputpanel.h  utils.cpp  utils.h  utils.hpp
drawer/: .gitignore  .gitignore   2dDecart.cpp  2dDecart.h  3dDecart.h  CMakeLists.txt  cylinder.h  drawer.h  main.cpp  polar.h  second_dim_drawer.h  spherical.h  tests.cpp  third_dim_drawer.h  сylinder.h
parser/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp  tests.cpp  utils.cpp  utils.hpp
